--- a/index.html
+++ b/index.html
@@ -6,12 +6,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PetLife</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
+        rel="stylesheet">
 </head>
 
 <body>
     <header>
         <a href="index.html">
-            <img src="img/logo.svg" alt="PetLife">
+            <img src="img/logo-white.svg" alt="PetLife">
         </a>
 
         <nav>
@@ -27,35 +31,39 @@
 
             <div>
                 <h1>Garanta uma vida longa e cheia de alegria para o seu melhor amigo</h1>
-                <p>A PetLife é o seu refúgio de confiança para o cuidado completo do seu pet. Com profissionais
+                <p class="paragrafo">A PetLife é o seu refúgio de confiança para o cuidado completo do seu pet. Com
+                    profissionais
                     dedicados e serviços abrangentes, oferecemos uma experiência acolhedora e personalizada, garantindo
                     o bem-estar,
                     a saúde e a felicidade dos seus animais de estimação.</p>
-                <a href="https://wa.me/551913452444" target="_blank">Marque uma consulta</a>
-                <a href="#clinica">Conheça nossa clínica</a>
+                <a class="button" href="https://wa.me/551913452444" target="_blank">Marque uma consulta</a>
+                <a class="button-trans" href="#clinica">Conheça nossa clínica</a>
             </div>
+            <img class="absolut" src="img/shape.svg" alt="">
         </section>
         <section id="clinica">
-            <h2>Cuidado Veterinário de Qualidade</h2>
-            <p>
-                Nossa clínica veterinária é o local onde a paixão pelos animais se une à excelência em cuidados
-                veterinários.
-                Sob a liderança da Dra. Vivien Reid, uma profissional altamente qualificada e comprometida, oferecemos
-                serviços
-                de saúde e bem-estar para animais de estimação de todas as espécies. Venha conhecer nossa clínica e
-                desfrute
-                da
-                atenção personalizada e do carinho que seu pet merece.
-            </p>
-            <ul>
-                <li>Consultas de rotina e exames de saúde abrangentes</li>
-                <li>Vacinação e imunização</li>
-                <li>Cirurgias e procedimentos veterinários</li>
-                <li>Tratamento e controle de doenças</li>
-                <li>Odontologia veterinária</li>
-                <li>Atendimento de emergência 24 horas</li>
-                <li>Nutrição e aconselhamento alimentar personalizado</li>
-            </ul>
+            <div>
+                <h2>Cuidado Veterinário de Qualidade</h2>
+                <p class="paragrafo">
+                    Nossa clínica veterinária é o local onde a paixão pelos animais se une à excelência em cuidados
+                    veterinários.
+                    Sob a liderança da Dra. Vivien Reid, uma profissional altamente qualificada e comprometida,
+                    oferecemos
+                    serviços
+                    de saúde e bem-estar para animais de estimação de todas as espécies. Venha conhecer nossa clínica e
+                    desfrute
+                    da
+                    atenção personalizada e do carinho que seu pet merece.
+                </p>
+                <ul>
+                    <li>Consultas de rotina e exames de saúde abrangentes</li>
+                    <li>Vacinação e imunização</li>
+                    <li>Cirurgias e procedimentos veterinários</li>
+                    <li>Tratamento e controle de doenças</li>
+                    <li>Odontologia veterinária</li>
+                    <li>Atendimento de emergência 24 horas</li>
+                    <li>Nutrição e aconselhamento alimentar personalizado</li>
+                </ul>
             </div>
             <img src="img/clinic-img.svg" alt="" width="480" height="480" loading="lazy">
 
@@ -64,7 +72,7 @@
         <section id="farmacia">
             <h2>Venha conferir o nosso petshop e farmácia</h2>
             <img src="img/shop-img.svg" alt="" width="645" height="430" loading="lazy">
-            <p>
+            <p class="paragrafo">
                 Além de ser uma clínica veterinária de confiança, também contamos com um completo petshop e farmácia.
                 Nosso
                 petshop oferece uma ampla seleção de produtos de alta qualidade, desde alimentos balanceados e petiscos
@@ -84,10 +92,10 @@
             <img src="img/faq-img.svg" alt="" width="540" height="540" loading="lazy">
             <div>
                 <h2>Ficou alguma dúvida?</h2>
-                <div>
+                <div class="duvida">
                     <h3>Quais serviços são oferecidos pela clínica da PetLife?</h3>
                     <img src="img/arrow-down.svg" alt="">
-                    <p>
+                    <p class="paragrafo">
                         A clínica da PetLife oferece uma ampla gama de serviços, incluindo consultas de rotina,
                         vacinação,
                         cirurgias,
@@ -98,10 +106,10 @@
                         para garantir a saúde e o bem-estar do seu pet.
                     </p>
                 </div>
-                <div>
+                <div class="duvida">
                     <h3>Quais espécies de animais a clínica veterinária atende?</h3>
                     <img src="img/arrow-down.svg" alt="">
-                    <p>
+                    <p class="paragrafo">
                         A clínica veterinária da PetLife atende animais de estimação de todas as espécies, incluindo
                         cães, gatos,
                         pássaros, roedores e répteis. Nossos profissionais possuem conhecimento e experiência para
@@ -109,10 +117,10 @@
                         diferentes tipos de animais, oferecendo um atendimento especializado e dedicado a cada um deles.
                     </p>
                 </div>
-                <div>
+                <div class="duvida">
                     <h3>A clínica da PetLife possui serviços de emergência?</h3>
                     <img src="img/arrow-down.svg" alt="">
-                    <p>
+                    <p class="paragrafo">
                         Sim, a clínica veterinária da PetLife oferece serviços de emergência 24 horas. Se o seu animal
                         de estimação
                         precisar de atendimento veterinário imediato fora do horário de expediente, nossa equipe está
@@ -120,10 +128,10 @@
                         ajudar, fornecendo cuidados urgentes e tratamento adequado para garantir o bem-estar do seu pet.
                     </p>
                 </div>
-                <div>
+                <div class="duvida">
                     <h3>A clínica oferece serviços de banho e tosa?</h3>
                     <img src="img/arrow-down.svg" alt="">
-                    <p>
+                    <p class="paragrafo">
                         Sim, a clínica veterinária da PetLife oferece serviços profissionais de banho e tosa. Nossa
                         equipe de
                         profissionais experientes garante que seu pet receba cuidados adequados, usando produtos de alta
@@ -142,21 +150,21 @@
                 <p>Cuidando com amor, vivendo com alegria: PetLife, onde a vida dos pets é mais feliz!</p>
             </div>
             <div>
-                <strong>Links rápidos</strong>
+                <strong class="title">Links rápidos</strong>
                 <a href="#inicio">Início</a>
                 <a href="#clinica">Clínica</a>
                 <a href="#farmacia">Farmácia</a>
                 <a href="#duvidas">Dúvidas</a>
             </div>
             <div>
-                <strong>Encontre-nos</strong>
+                <strong class="title">Encontre-nos</strong>
                 <p>WhatsApp: (22) 98765-4321</p>
                 <p>Email: contato@petlife.com.br</p>
                 <p>Endereço: Av. 7 de Setembro, nº 42, Centro</p>
             </div>
         </footer>
-        <div>
-            Desenvolvido por <a href="https://github.com/isaacpontes" target="_blank">@isaacpontes</a> na trilha Start
+        <div id="copyright">
+            Desenvolvido por <a href="https://github.com/marquesl99" target="_blank">@marquesl99</a> na trilha Start
             na Programação 🤘 da OneBitCode.
         </div>
     </main>
