Inclusão de classes no footer

--- a/index.html
+++ b/index.html
@@ -149,17 +149,17 @@
                 <img src="img/logo.svg" alt="PetLife">
                 <p>Cuidando com amor, vivendo com alegria: PetLife, onde a vida dos pets é mais feliz!</p>
             </div>
-            <div>
+            <div class="links">
                 <strong class="title">Links rápidos</strong>
                 <a href="#inicio">Início</a>
                 <a href="#clinica">Clínica</a>
                 <a href="#farmacia">Farmácia</a>
                 <a href="#duvidas">Dúvidas</a>
             </div>
-            <div>
+            <div class="contato" >
                 <strong class="title">Encontre-nos</strong>
-                <p>WhatsApp: (22) 98765-4321</p>
-                <p>Email: contato@petlife.com.br</p>
+                <p>WhatsApp: <a href="https://wa.me/5511913452444" target="_blank">(11) 91345-2444</a></p>
+                <p>Email: <a href="mailto:tm.luiz99@gmail.com"> contato@petlife.com.br</a></p>
                 <p>Endereço: Av. 7 de Setembro, nº 42, Centro</p>
             </div>
         </footer>
