Correção da tag main, e inclusão do arquivo index.js

--- a/index.html
+++ b/index.html
@@ -143,32 +143,34 @@
                 </div>
             </div>
         </section>
-
-        <footer>
-            <div>
-                <img src="img/logo.svg" alt="PetLife">
-                <p>Cuidando com amor, vivendo com alegria: PetLife, onde a vida dos pets é mais feliz!</p>
-            </div>
-            <div class="links">
-                <strong class="title">Links rápidos</strong>
-                <a href="#inicio">Início</a>
-                <a href="#clinica">Clínica</a>
-                <a href="#farmacia">Farmácia</a>
-                <a href="#duvidas">Dúvidas</a>
-            </div>
-            <div class="contato" >
-                <strong class="title">Encontre-nos</strong>
-                <p>WhatsApp: <a href="https://wa.me/5511913452444" target="_blank">(11) 91345-2444</a></p>
-                <p>Email: <a href="mailto:tm.luiz99@gmail.com"> contato@petlife.com.br</a></p>
-                <p>Endereço: Av. 7 de Setembro, nº 42, Centro</p>
-            </div>
-        </footer>
-        <div id="copyright">
-            Desenvolvido por <a href="https://github.com/marquesl99" target="_blank">@marquesl99</a> na trilha Start
-            na Programação 🤘 da OneBitCode.
-        </div>
     </main>
 
+    <footer>
+        <div>
+            <img src="img/logo.svg" alt="PetLife">
+            <p>Cuidando com amor, vivendo com alegria: PetLife, onde a vida dos pets é mais feliz!</p>
+        </div>
+        <div class="links">
+            <strong class="title">Links rápidos</strong>
+            <a href="#inicio">Início</a>
+            <a href="#clinica">Clínica</a>
+            <a href="#farmacia">Farmácia</a>
+            <a href="#duvidas">Dúvidas</a>
+        </div>
+        <div class="contato">
+            <strong class="title">Encontre-nos</strong>
+            <p>WhatsApp: <a href="https://wa.me/5511913452444" target="_blank">(11) 91345-2444</a></p>
+            <p>Email: <a href="mailto:tm.luiz99@gmail.com"> contato@petlife.com.br</a></p>
+            <p>Endereço: Av. 7 de Setembro, nº 42, Centro</p>
+        </div>
+    </footer>
+    <div id="copyright">
+        Desenvolvido por <a href="https://github.com/marquesl99" target="_blank">@marquesl99</a> na trilha Start
+        na Programação 🤘 da OneBitCode.
+    </div>
+
+    <script src="index.js"></script>
+    
 </body>
 
 </html>
